--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,10 @@ pandas==2.2.1
 matplotlib==3.8.2
 flask==3.1.1
 gunicorn==23.0.0
+pyserial==3.5
 
 # MODBUS
+modpoll==1.5.0
 minimalmodbus==2.1.1
 
 # DB
