--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 # Python
 pandas==2.2.1
 matplotlib==3.8.2
+pyserial==3.5
+
+# WSGI
 flask==3.1.1
 gunicorn==23.0.0
-pyserial==3.5
 
 # MODBUS
 modpoll==1.5.0
